--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ numpy>=1.9.2
 flask==1.1.2
 itsdangerous==1.1.0
 gunicorn==19.9.0
-tensorflow-cpu>=2.4.0
-
+requests==2.25.1
+jinja2==2.11.3
+markupsafe==1.1.1
+Werkzeug==0.15.5
